<resources>
    <string name="app_name">Tefteri</string>
    <string name="receipt_id">Αναγνωριστικό</string>
    <string name="not_assigned">Not assigned</string>
    <string name="company_name">Επωνυμία</string>
    <string name="receipt_cost">Ποσό (€)</string>
    <string name="receipt_date">Ημερομηνία</string>
    <string name="add">Προσθηκη</string>
    <string name="edit">Επεξεργασια</string>
    <string name="find">Αναζητηση</string>
    <string name="delete">Διαγραφη</string>
    <string name="no_match_found">Δεν βρέθηκαν αποτελέσματα</string>
    <string name="record_deleted">Επιτυχής Διαγραφή</string>
    <string name="title_recents">Πρόσφατες</string>
    <string name="title_calendar">Μηνιαία</string>
    <string name="add_option">Προσθήκη</string>
    <string name="multiple_add_option">Πολλαπλή προσθήκη</string>
    <string name="add_and_edit_option">Με επεξεργασία</string>
    <string name="Cancel_button">ΑΚΥΡΩΣΗ</string>
    <string name="Save_button">ΑΠΟΘΗΚΕΥΣΗ</string>
    <string name="Delete_button">ΔΙΑΓΡΑΦΗ</string>
    <string name="Edit_button">ΕΠΕΞΕΡΓΑΣΙΑ</string>
    <string name="Recent">Πρόσφατες</string>
    <string name="Date">Ημερομηνία</string>
    <string name="Company_name">Επωνυμία</string>
    <string name="Cost_amount">Ποσό</string>
    <string name="Edit_card">Επεξεργασία</string>
    <string name="Delete_card">Διαγραφή</string>
    <string name="emptyValues">ΚΕΝΑ ΠΕΔΙΑ</string>
    <string name="Go_to_about_page">About</string>
    <string name="wrong_date_format">Λάθος μορφή ημερομηνίας!</string>
    <string name="updated">Ενημερώθηκε!</string>
    <string name="logo_image">logo image</string>
    <string name="tefteri_qr">Το Tefteri είναι μια εφαρμογή που επιτρέπει στον καταναλωτή της ελληνικής αγοράς να κρατάει αρχείο τον αγορών του. Λειτουργεί πολύ απλά, πατήστε το κουμπί + στην αρχική οθόνη της εφαρμογής, έπειτα προσθήκη και σκανάρετε το QR της απόδειξης της αγοράς σας. Θα παρατηρήσετε ότι πλέον έχετε μια εγγραφή της απόδειξής σας μέσα την εφαρμογή. Επιπλέον, υποστηρίζεται η επεξεργασία των αποδείξεων καθώς και η προβολή των μηνιαίων εξόδων σας. Η έκδοση που έχετε αυτήν την στιγμή εγκατεστημένη υποστηρίζει αποδείξεις ταμειακών λιανικής που διαβιβάζονται στην ΑΑΔΕ, καθώς και αποδείξεις του συστήματος einvoicing της softone. Για οποιοδήποτε σφάλμα συναντήσετε, μπορείτε να επικοινωνήσετε στο email: chrizaro@csd.auth.gr. Η εφαρμογή αναπτύχθηκε από τους φοιτητές πληροφορικής Ζαρογιάννη Χριστόδουλο, Γώγο Λάζαρο και Σταύρο Νικολαΐδη.</string>
    <string name="no_network">Συνδεθείτε σε κάποιο δίκτυο!</string>
    <string name="manual_add">Χειροκίνητη προσθήκη</string>
    <string name="wrong_month">Δεν υπάρχει τέτοιος μήνας!</string>
    <string name="wrong_day">Δεν υπάρχει τέτοια ημέρα!</string>
</resources>
