<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="365dp"
                android:layout_height="189dp"
                android:ems="10"
                android:gravity="center"
                android:text="@string/tefteri_qr"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/tefteri"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>